# Lead-Analytics-Dashboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.backend  Dockerfile.backend.dockerignore  Dockerfile.frontend  Dockerfile.frontend.dockerignore  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml
api/overview/: index.html
architecture/: index.html
backend/: app.py
backend/core/: config.py
backend/routers/ingestion_leads/: docs.py  main.py  model.py  utils.py
backend/routers/transformation/: docs.py  main.py
backend/routers/transformation/request/: count_by_month_form_deltalake.sql  count_by_week_form_deltalake.sql
docs/: architecture.md  index.md  modules.md
docs/api/: overview.md
docs/getting-started/: configuration.md  docker.md  installation.md  observability.md
frontend/: .dockerignore  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: app-sidebar.tsx  conversion-ratios-table.tsx  leads-analytics-chart.tsx  monthly-objectives-table.tsx  weekly-objectives-table.tsx
frontend/src/config/: navigation.ts
getting-started/configuration/: index.html
getting-started/docker/: index.html
getting-started/installation/: index.html
getting-started/observability/: index.html
ingestion_leads/: main.py
leads_dashboard/: .gitignore  freekap_ui.py  rxconfig.py
leads_dashboard/pages/: dashboard.py
leads_dashboard/ui/: area.py  bar.py  base.py  nav.py  sidebar.py
leads_notion/: model.py  rxconfig.py
leads_notion/leads_notion/: leads_notion.py
modules/: index.html
search/: search_index.json
